Added phase 8 blueprint of fragment decision tree and implemented